# src/schemas/product_schema.py
@@ -38,14 +38,4 @@ class ProductResponse(BaseModel):
 class ProductListResponse(BaseModel):
     total_available: int
     total_return: int
-    items: List[ProductResponse]
-
-
-class SpendingByCategory(BaseModel):
-    category_id: int
-    category_name: str
-    total_spent: Decimal
-
-
-class TotalSpending(BaseModel):
-    total_spent: Decimal
+    results: List[ProductResponse]
